# ml-project

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: main.rs
