[package]
name = "ml-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.1.6"
linfa = "0.6.1"
linfa-datasets = "0.6.1"
linfa-trees = "0.6.1"
ndarray = "0.15.6"
